<resources>
    <string name="app_name">My cocktails</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_first_cocktail">Add your first cocktail here</string>
    <string name="title">Title</string>
    <string name="add_title">Add title</string>
    <string name="description">Description</string>
    <string name="optional_field">Optional field</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="ingredient">Ingredient</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>