<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="27dp"
    tools:context=".CustomDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/didact_gothic_regular"
            android:text="@string/add_ingredient"
            android:textColor="@color/app_first_color"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ingredient_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/ingredient"
            android:textColorHint="@color/app_first_color"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusTopStart="28dp"
            app:boxStrokeColor="@color/app_second_color"
            app:helperText="@string/add_ingredient"
            app:helperTextTextColor="@color/app_second_color"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/app_second_color"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_ingredient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/didact_gothic_regular"
                android:gravity="start"
                android:textColor="@color/app_first_color"
                android:textColorHint="@color/app_second_color"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/button_background"
            android:fontFamily="@font/didact_gothic_regular"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:cornerRadius="28dp"
            app:layout_constraintTop_toBottomOf="@+id/til_ingredient_name" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/didact_gothic_regular"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/button_background"
            android:textSize="24sp"
            app:cornerRadius="28dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_add"
            app:strokeColor="@color/button_background" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>