<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="24dp"
    tools:context=".AddCocktailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Placeholder
                android:id="@+id/place_holder"
                android:layout_width="216dp"
                android:layout_height="204dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_cocktail_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/title"
                android:textColorHint="@color/app_first_color"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeColor="@color/app_second_color"
                app:helperText="@string/add_title"
                app:helperTextTextColor="@color/app_second_color"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/app_second_color"
                app:layout_constraintTop_toBottomOf="@+id/place_holder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_cocktail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/didact_gothic_regular"
                    android:gravity="start"
                    android:textColor="@color/app_first_color"
                    android:textColorHint="@color/app_second_color"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/description"
                android:textColorHint="@color/app_first_color"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeColor="@color/app_second_color"
                app:helperText="@string/optional_field"
                app:helperTextTextColor="@color/app_second_color"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/app_second_color"
                app:layout_constraintTop_toBottomOf="@+id/til_cocktail_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_description"
                    android:layout_width="match_parent"
                    android:layout_height="154dp"
                    android:fontFamily="@font/didact_gothic_regular"
                    android:gravity="start"
                    android:textColor="@color/app_first_color"
                    android:textColorHint="@color/app_second_color"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:chipSpacingHorizontal="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_description">


            </com.google.android.material.chip.ChipGroup>


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_add_ingredient"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="@color/button_background"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="@+id/chip_group"
                app:layout_constraintStart_toEndOf="@+id/chip_group"
                app:layout_constraintTop_toTopOf="@+id/chip_group"
                app:shapeAppearanceOverlay="@style/chipCornerStyle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_recipe"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/description"
                android:textColorHint="@color/app_first_color"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeColor="@color/app_second_color"
                app:helperText="@string/optional_field"
                app:helperTextTextColor="@color/app_second_color"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/app_second_color"
                app:layout_constraintTop_toBottomOf="@+id/chip_group">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="154dp"
                    android:fontFamily="@font/didact_gothic_regular"
                    android:gravity="start"
                    android:textColor="@color/app_first_color"
                    android:textColorHint="@color/app_second_color"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/button_background"
                android:fontFamily="@font/didact_gothic_regular"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="24sp"
                app:cornerRadius="28dp"
                app:layout_constraintTop_toBottomOf="@+id/til_recipe" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_close"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/didact_gothic_regular"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/button_background"
                android:textSize="24sp"
                app:cornerRadius="28dp"
                app:layout_constraintTop_toBottomOf="@+id/bt_save"
                app:strokeColor="@color/button_background" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>